cmake_minimum_required(VERSION 4.1)
project(DSA_CPP_LAB_SVNIT)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA_CPP_LAB_SVNIT main.cpp
        LAB_3/p1.cpp
        LAB_3/p2.cpp
        LAB_3/p3.cpp
        LAB_3/p4.cpp
        LAB_3/p5.cpp
        LAB_3/p6.cpp
        LAB_3/p7.cpp
        ImpQuestion/SpiralPath.cpp
        LAB_4/reverse.cpp
        LAB_4/palindrome.cpp
        LAB_4/LastNode.cpp
        LAB_4/mergeLinkedLists.cpp
        LAB_4/Intersection.cpp
        "LAB_4/mergingKSortedList.cpp"
        LAB_5/reversingDoublyLinkedList.cpp
        LAB_5/pairSum.cpp
        ImpQuestion/ques.cpp
        LAB_5/revresebyK.cpp
        LAB_5/DuplicateNodes.cpp
        LAB_5/maxSublistSum.cpp
        LAB_5/palindromeCheck.cpp
        LAB_5/mergeTwo.cpp
        LAB_5/swapNode.cpp
        LAB_5B/splitCircularLinkedList.cpp
        LAB_5B/sorting.cpp
        LAB_5B/insert.cpp
        LAB_5B/reverseCL.cpp
        LAB_6/stacksUsingArray.cpp
        LAB_5B/deleteKthNode.cpp
        LAB_5/randomPointers.cpp
        LAB_7/getMinOperation.cpp
)
