cmake_minimum_required(VERSION 4.1)
project(DSA_CPP_LAB_SVNIT)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA_CPP_LAB_SVNIT main.cpp
        LAB_3/p1c.cpp
        LAB_3/p2.cpp
        LAB_3/p3.cpp
        LAB_3/p4.cpp
        LAB_3/p5.cpp
        LAB_3/p6.cpp
        LAB_3/p7.cpp
        ImpQuestion/SpiralPath.cpp
        LAB_4/reverse.cpp
        LAB_4/palindrome.cpp
        LAB_4/LastNode.cpp
        LAB_4/mergeLinkedLists.cpp
        LAB_4/Intersection.cpp
        "LAB_4/mergingKSortedList.cpp"
        LAB_5/reversingDoublyLinkedList.cpp
        LAB_5/pairSum.cpp
        ImpQuestion/ques.cpp
        LAB_5/revresebyK.cpp
        LAB_5/DuplicateNodes.cpp
        LAB_5/maxSublistSum.cpp
        LAB_5/palindromeCheck.cpp
        LAB_5/mergeTwo.cpp
        LAB_5/swapNode.cpp
        LAB_5B/sorting.cpp
        LAB_5B/insert.cpp
        LAB_5B/reverseCL.cpp
        LAB_6/stacksUsingArray.cpp
        LAB_5B/deleteKthNode.cpp
        LAB_5/randomPointers.cpp
        LAB_7/getMinOperation.cpp
        LAB_5B/split.cpp
        LAB_8/p1.cpp
        LAB_8/p2.cpp
        LAB_8/p3.cpp
        "CF CST/deletionSort.cpp"
        "CF CST/eatingGame.cpp"
        "CF CST/specialityString.cpp"
        "CF CST/divisiveBattle.cpp"
        "CF CST/portal.cpp"
        "CF CST/mooclearReactor2.cpp"
        "CF CST/operationPermutation.cpp"
        "CF CST/sixSeven.cpp"
        LAB_6/resverseString.cpp
        LAB_6/balancedParan.cpp
        LAB_6/iToPoST.cpp
        LAB_6/valueofPo.cpp
        LAB_6/minStack.cpp
        LAB_6/stackUsingLinkedList.cpp
)
